// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components <CounterComponent /> should render correctly 1`] = `
<InjectIntl(CounterComponent)
  counter={
    Object {
      "counter": 0,
    }
  }
  decrement={[Function]}
  increment={[Function]}
  incrementAsync={[Function]}
  incrementIfOdd={[Function]}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
/>
`;

exports[`components <CounterComponent /> should render correctly 2`] = `
<InjectIntl(CounterComponent)
  counter={
    Object {
      "counter": 1,
    }
  }
  decrement={[Function]}
  increment={[Function]}
  incrementAsync={[Function]}
  incrementIfOdd={[Function]}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
/>
`;
